--- a/pages/france.html
+++ b/pages/france.html
@@ -26,7 +26,6 @@
       src="https://kit.fontawesome.com/51b92a92ba.js"
       crossorigin="anonymous"
     ></script>
-    <!--   LINK FONTS           -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -35,39 +34,44 @@
     />
     <!--                  LINKS CSS & JS -->
     <link rel="stylesheet" href="/css/styles.css" />
-  <script src="/js/index.js"> </script>
+    <script defer src="js/index.js"></script>
   </head>
   <body class="grid__container">
     <!--                    HEADER                     -->
     <header class="header">
       <nav class="nav">
-        <h1 class="logo">WW2 PHOTOS</h1>
-        <button class="nav__toggle" aria-label="Abrir menú">
+        <a class="logo nav-link" href="/index.html">WW2 PHOTOS</a>
+        <button class="nav-toggle" aria-label="Open menu">
           <i class="fas fa-bars"></i>
         </button>
-        <ul class="nav__menu nav__menu--visible"">
-          <li class="nav__menu--item">
-            <a class="nav__menu--link" href="/index.html">Home</a>
+        <ul class="nav-menu nav-menu_visible">
+          <li class="nav-menu-item">
+            <a href="/index.html" class="nav-menu-link nav-link">Home</a>
           </li>
-          <li class="nav__menu--item">
-            <a class="nav__menu--link" href="/pages/gallery.html">Gallery</a>
+          <li class="nav-menu-item">
+            <a class="nav-menu-link nav-link" href="/pages/gallery.html"
+              >Gallery</a
+            >
           </li>
-          <li class="nav__menu--item">
-            <a class="nav__menu--link" href="/pages/aboutme.html">About me</a>
+          <li class="nav-menu-item">
+            <a class="nav-menu-link nav-link" href="/pages/aboutme.html"
+              >About me</a
+            >
           </li>
-          <li class="nav__menu--item">
-            <a class="nav__menu--link" href="/pages/contact.html">Contact</a>
+          <li class="nav-menu-item">
+            <a class="nav-menu-link nav-link" href="/pages/contact.html"
+              >Contact</a
+            >
           </li>
         </ul>
-        
       </nav>
     </header>
-    <!--                  F I N            H E A D E R         -->
+    <!--  F I N            H E A D E R-->
     <!--                    M A I N                        -->
     <main class="main">
       <div class="France">
         <h2 class="France__title">France</h2>
-        
+        <!--  pic  1 -->
         <img
           class="France__img rounded img-fluid"
           src="/img/FRA/A French Army colonel awarding Operation Jedburgh personnel Jean Larrieu the Croix de Guerre with Palm, Place Bellecour, Lyon, France, 5 Sep 1944.jpg"
@@ -75,17 +79,19 @@
         />
         <h5 class="France__text">
           A French Army colonel awarding Operation Jedburgh personnel Jean
-          Larrieu the Croix de Guerre with Palm, Place Bellecour, Lyon,
-          France, 5 Sep 1944
+          Larrieu the Croix de Guerre with Palm, Place Bellecour, Lyon, France,
+          5 Sep 1944
         </h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic  2  -->
         <img
           class="France__img rounded img-fluid"
           src="/img/FRA/Char D2 captured.jpg"
           alt="Char D2 captured"
         />
         <h5 class="France__text">Char D2 captured</h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic  3  -->
         <img
           class="France__img rounded img-fluid"
           src="/img/FRA/Charles de Gaulle spoke at the balcony of Hotel de Ville, Cherbourg, France, 20 Aug 1944.jpg"
@@ -95,7 +101,8 @@
           Charles de Gaulle spoke at the balcony of Hotel de Ville, Cherbourg,
           France, 20 Aug 1944
         </h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic 4   -->
         <img
           class="France__img rounded img-fluid"
           src="/img/FRA/French 2nd Armored Division troops and vehicles parading through the Arc de Triomphe down the Avenue des Champs-Élysées, Paris, France, 26 Aug 1944.jpg"
@@ -103,10 +110,11 @@
         />
         <h5 class="France__text">
           French 2nd Armored Division troops and vehicles parading through the
-          Arc de Triomphe down the Avenue des Champs-Élysées, Paris, France,
-          26 Aug 1944
+          Arc de Triomphe down the Avenue des Champs-Élysées, Paris, France, 26
+          Aug 1944
         </h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic  5  -->
         <img
           class="France__img rounded img-fluid"
           src="/img/FRA/French resistance fighters being arrested, France, Jul 1944.jpg"
@@ -115,7 +123,8 @@
         <h5 class="France__text">
           French resistance fighters being arrested, France, Jul 1944
         </h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic  6  -->
         <img
           class="France__img rounded img-fluid"
           src="/img/FRA/French resistance fighters working with American paratroopers in Normandy, France, Jun-Jul 1944.jpg"
@@ -125,24 +134,27 @@
           French resistance fighters working with American paratroopers in
           Normandy, France, Jun-Jul 1944
         </h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic 7   -->
         <img
           class="France__img rounded img-fluid"
           src="/img/FRA/French troops and H35 tanks advancing through a damaged village during the invasion of France, 25 May 1940..jpg"
           alt="Tank H35 and french troops"
         />
         <h5 class="France__text rounded img-fluid">
-          French troops and H35 tanks advancing through a damaged village
-          during the invasion of France, 25 May 1940
+          French troops and H35 tanks advancing through a damaged village during
+          the invasion of France, 25 May 1940
         </h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic  8  -->
         <img
           class="France__img rounded img-fluid"
           src="/img/FRA/S-35 Somua number 10.jpg"
           alt="Somua S-35 number 10"
         />
         <h5 class="France__text">Somua S-35 number 10</h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic 9  -->
         <img
           class="France__img rounded img-fluid"
           src="/img/FRA/Scuttled French battleship Provence and seaplane tender Commandant Teste, Toulon, France, date unknown.jpg"
@@ -152,15 +164,16 @@
           Scuttled French battleship Provence and seaplane tender Commandant
           Teste, Toulon, France, date unknown
         </h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic  10   -->
         <img
           class="France__img rounded img-fluid"
           src="/img/FRA/Two French soldiers giving African-American soldiers candy, Rouffach, France, 5 Feb 1945.jpg"
           alt="Two french soldiers giving African-american soldiers"
         />
         <h5 class="France__text">
-          Two French soldiers giving African-American soldiers candy,
-          Rouffach, France, 5 Feb 1945.jpg
+          Two French soldiers giving African-American soldiers candy, Rouffach,
+          France, 5 Feb 1945.jpg
         </h5>
       </div>
     </main>
@@ -168,8 +181,7 @@
     <!--                F O O T E R              -->
     <footer class="footer">
       <small
-        >Photo credits to their respective owners,
-          I just share them with you.
+        >Photo credits to their respective owners, I just share them with you.
         <strong>Design by Juan Bravo - 2021</strong>
       </small>
     </footer>
@@ -180,6 +192,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
-    <script src="/js/index.js"> </script>
+    <script src="/js/index.js"></script>
   </body>
 </html>
