--- a/pages/germany.html
+++ b/pages/germany.html
@@ -26,7 +26,6 @@
       src="https://kit.fontawesome.com/51b92a92ba.js"
       crossorigin="anonymous"
     ></script>
-    <!--   LINK FONTS           -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -35,46 +34,52 @@
     />
     <!--                  LINKS CSS & JS -->
     <link rel="stylesheet" href="/css/styles.css" />
-  <script src="/js/index.js"> </script>
+    <script defer src="js/index.js"></script>
   </head>
   <body class="grid__container">
     <!--                    HEADER                     -->
     <header class="header">
       <nav class="nav">
-        <h1 class="logo">WW2 PHOTOS</h1>
-        <button class="nav__toggle" aria-label="Abrir menú">
+        <a class="logo nav-link" href="/index.html">WW2 PHOTOS</a>
+        <button class="nav-toggle" aria-label="Open menu">
           <i class="fas fa-bars"></i>
         </button>
-        <ul class="nav__menu nav__menu--visible"">
-          <li class="nav__menu--item">
-            <a class="nav__menu--link" href="/index.html">Home</a>
+        <ul class="nav-menu nav-menu_visible">
+          <li class="nav-menu-item">
+            <a href="/index.html" class="nav-menu-link nav-link">Home</a>
           </li>
-          <li class="nav__menu--item">
-            <a class="nav__menu--link" href="/pages/gallery.html">Gallery</a>
+          <li class="nav-menu-item">
+            <a class="nav-menu-link nav-link" href="/pages/gallery.html"
+              >Gallery</a
+            >
           </li>
-          <li class="nav__menu--item">
-            <a class="nav__menu--link" href="/pages/aboutme.html">About me</a>
+          <li class="nav-menu-item">
+            <a class="nav-menu-link nav-link" href="/pages/aboutme.html"
+              >About me</a
+            >
           </li>
-          <li class="nav__menu--item">
-            <a class="nav__menu--link" href="/pages/contact.html">Contact</a>
+          <li class="nav-menu-item">
+            <a class="nav-menu-link nav-link" href="/pages/contact.html"
+              >Contact</a
+            >
           </li>
         </ul>
-        
       </nav>
     </header>
-    <!--                  F I N            H E A D E R         -->
+    <!--  F I N            H E A D E R-->
     <!--                    M A I N                        -->
     <main class="main">
       <div class="Germany">
         <h2 class="Germany__title">Germany</h2>
-        
+        <!--  pic 1  -->
         <img
           class="Germany__img rounded img-fluid"
           src="/img/GER/14583536_997904740319847_9155126965026422784_n.jpg"
           alt="Panzergrenadier at combat"
         />
         <h5 class="Germany__text">Panzergrenadier at combat</h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic  2  -->
         <img
           class="Germany__img rounded img-fluid"
           src="/img/GER/A German Tiger II tank being painted, France, Jun 1944, photo 2 of 3.jpg"
@@ -83,7 +88,8 @@
         <h5 class="Germany__text">
           A German Tiger II tank being painted, France, Jun 1944
         </h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic 3   -->
         <img
           class="Germany__img rounded img-fluid"
           src="/img/GER/An officer demonstrating a Panzerschreck weapon to General der Panzertruppen Adolf Kuntzen, Étretat, France, May 1944.jpg"
@@ -93,7 +99,8 @@
           An officer demonstrating a Panzerschreck weapon to General der
           Panzertruppen Adolf Kuntzen, Étretat, France, May 1944
         </h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic 4   -->
         <img
           class="Germany__img rounded img-fluid"
           src="/img/GER/Captured American M8 armored cars, northern France, summer 1944.jpg"
@@ -102,7 +109,8 @@
         <h5 class="Germany__text">
           Captured American M8 armored cars, northern France, summer 1944
         </h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic   5 -->
         <img
           class="Germany__img rounded img-fluid"
           src="/img/GER/Destroyed German Sd.Kfz. 124 Wespe self-propelled gun carriage near Mortrée, Orne, Normandy, France, circa Jun-Jul 1944.jpg"
@@ -112,7 +120,8 @@
           estroyed German Sd.Kfz. 124 Wespe self-propelled gun carriage near
           Mortrée, Orne, Normandy, France, circa Jun-Jul 1944
         </h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic 6  -->
         <img
           class="Germany__img rounded img-fluid"
           src="/img/GER/German parade of captured French AMC 35 S medium tanks and H35 light tanks, Paris, France, 1941.jpg"
@@ -122,7 +131,8 @@
           German parade of captured French AMC 35 S medium tanks and H35 light
           tanks, Paris, France, 1941
         </h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic  7  -->
         <img
           class="Germany__img rounded img-fluid"
           src="/img/GER/German paratroopers with Panzerfaust, Panzerschreck, and MP 40 submachine guns, Bretagne, France, Nov 1944; note destroyed US Sherman M4A3 tank.jpg"
@@ -130,10 +140,11 @@
         />
         <h5 class="Germany__text">
           German paratroopers with Panzerfaust, Panzerschreck, and MP 40
-          submachine guns, Bretagne, France, Nov 1944; note destroyed US
-          Sherman M4A3 tank
+          submachine guns, Bretagne, France, Nov 1944; note destroyed US Sherman
+          M4A3 tank
         </h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic   8    -->
         <img
           class="Germany__img rounded img-fluid"
           src="/img/GER/German sniper with Kar98k rifle, France or Belgium, 1943-1944.jpg"
@@ -142,7 +153,8 @@
         <h5 class="Germany__text">
           German sniper with Kar98k rifle, France or Belgium, 1943-1944
         </h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic  9  -->
         <img
           class="Germany__img rounded img-fluid"
           src="/img/GER/German soldier with MG42 machine gun, Caen, France, Jun 1944.jpg"
@@ -151,7 +163,8 @@
         <h5 class="Germany__text">
           German soldier with MG42 machine gun, Caen, France, Jun 1944
         </h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic  10  -->
         <img
           class="Germany__img rounded img-fluid"
           src="/img/GER/German troops in northern France, Jul-Sep 1944.jpg"
@@ -166,8 +179,7 @@
     <!--                F O O T E R              -->
     <footer class="footer">
       <small
-        >Photo credits to their respective owners,
-          I just share them with you.
+        >Photo credits to their respective owners, I just share them with you.
         <strong>Design by Juan Bravo - 2021</strong>
       </small>
     </footer>
@@ -178,6 +190,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
-    <script src="/js/index.js"> </script>
+    <script src="/js/index.js"></script>
   </body>
 </html>
