--- a/pages/italy.html
+++ b/pages/italy.html
@@ -26,7 +26,6 @@
       src="https://kit.fontawesome.com/51b92a92ba.js"
       crossorigin="anonymous"
     ></script>
-    <!--   LINK FONTS           -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -35,39 +34,44 @@
     />
     <!--                  LINKS CSS & JS -->
     <link rel="stylesheet" href="/css/styles.css" />
-  <script src="/js/index.js"> </script>
+    <script defer src="js/index.js"></script>
   </head>
   <body class="grid__container">
     <!--                    HEADER                     -->
     <header class="header">
       <nav class="nav">
-        <h1 class="logo">WW2 PHOTOS</h1>
-        <button class="nav__toggle" aria-label="Abrir menú">
+        <a class="logo nav-link" href="/index.html">WW2 PHOTOS</a>
+        <button class="nav-toggle" aria-label="Open menu">
           <i class="fas fa-bars"></i>
         </button>
-        <ul class="nav__menu nav__menu--visible"">
-          <li class="nav__menu--item">
-            <a class="nav__menu--link" href="/index.html">Home</a>
+        <ul class="nav-menu nav-menu_visible">
+          <li class="nav-menu-item">
+            <a href="/index.html" class="nav-menu-link nav-link">Home</a>
           </li>
-          <li class="nav__menu--item">
-            <a class="nav__menu--link" href="/pages/gallery.html">Gallery</a>
+          <li class="nav-menu-item">
+            <a class="nav-menu-link nav-link" href="/pages/gallery.html"
+              >Gallery</a
+            >
           </li>
-          <li class="nav__menu--item">
-            <a class="nav__menu--link" href="/pages/aboutme.html">About me</a>
+          <li class="nav-menu-item">
+            <a class="nav-menu-link nav-link" href="/pages/aboutme.html"
+              >About me</a
+            >
           </li>
-          <li class="nav__menu--item">
-            <a class="nav__menu--link" href="/pages/contact.html">Contact</a>
+          <li class="nav-menu-item">
+            <a class="nav-menu-link nav-link" href="/pages/contact.html"
+              >Contact</a
+            >
           </li>
         </ul>
-        
       </nav>
     </header>
-    <!--                  F I N            H E A D E R         -->
+    <!--  F I N            H E A D E R-->
     <!--                    M A I N                        -->
     <main class="main">
       <div class="Italy">
         <h2 class="Italy__title">Italy</h2>
-        
+        <!--  pic  1  -->
         <img
           class="Italy__img rounded img-fluid"
           src="/img/ITA/An Italian pilot preparing for flight with his G.55 aircraft, date unknown.jpg"
@@ -77,7 +81,8 @@
           An Italian pilot preparing for flight with his G.55 aircraft, date
           unknown
         </h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic 2   -->
         <img
           class="Italy__img rounded img-fluid"
           src="/img/ITA/Italian AB 41 armored cars in the Balkan Peninsula, 1943.jpg"
@@ -86,7 +91,8 @@
         <h5 class="Italy__text">
           Italian AB 41 armored cars in the Balkan Peninsula, 1943
         </h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic  3  -->
         <img
           class="Italy__img rounded img-fluid"
           src="/img/ITA/Italian cruisers Zara, Fiume, Pola, and Gorizia at Trieste, Italy, date unknown.jpg"
@@ -96,7 +102,8 @@
           Italian cruisers Zara, Fiume, Pola, and Gorizia at Trieste, Italy,
           date unknown
         </h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic  4  -->
         <img
           class="Italy__img rounded img-fluid"
           src="/img/ITA/Italian M13-40 medium tanks in Tripoli, Libya, Mar 1941.jpg"
@@ -105,7 +112,8 @@
         <h5 class="Italy__text">
           Italian M13-40 medium tanks in Tripoli, Libya, Mar 1941
         </h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic 5   -->
         <img
           class="Italy__img rounded img-fluid"
           src="/img/ITA/Italian M14-41 tanks and Semovente 75-18 assault guns in Italy, Sep 1943.jpg"
@@ -115,27 +123,28 @@
           Italian M14-41 tanks and Semovente 75-18 assault guns in Italy, Sep
           1943
         </h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic 6   -->
         <img
           class="Italy__img rounded img-fluid"
           src="/img/ITA/Italian paratroopers in a forest at Monte Cassino, Italy, 1943-1944 2.jpg"
           alt="Italian paratroopers in a forest at Monte Cassino"
         />
         <h5 class="Italy__text">
-          Italian paratroopers in a forest at Monte Cassino, Italy, 1943-1944
-          p1
+          Italian paratroopers in a forest at Monte Cassino, Italy, 1943-1944 p1
         </h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic  7  -->
         <img
           class="Italy__img rounded img-fluid"
           src="/img/ITA/Italian paratroopers in a forest at Monte Cassino, Italy, 1943-1944.jpg"
           alt="Italian paratroopers in a forest at Monte Cassino 2"
         />
         <h5 class="Italy__text">
-          Italian paratroopers in a forest at Monte Cassino, Italy, 1943-1944
-          p2
+          Italian paratroopers in a forest at Monte Cassino, Italy, 1943-1944 p2
         </h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic  8  -->
         <img
           class="Italy__img rounded img-fluid"
           src="/img/ITA/Italian troops marching into Durrës, Albania, 7 Apr 1939.jpg"
@@ -144,7 +153,8 @@
         <h5 class="Italy__text">
           Italian troops marching into Durrës, Albania, 7 Apr 1939
         </h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic  9  -->
         <img
           class="Italy__img rounded img-fluid"
           src="/img/ITA/SM.79 bombers of 193rd Squadron, 30th Wing, 87th Group, Regia Aeronautica (Italian Air Force) over North Africa, 1940 to 1942.jpg"
@@ -154,7 +164,8 @@
           SM.79 bombers of 193rd Squadron, 30th Wing, 87th Group, Regia
           Aeronautica (Italian Air Force) over North Africa, 1940 to 1942
         </h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic  10  -->
         <img
           class="Italy__img rounded img-fluid"
           src="/img/ITA/Soldier of the Italian Social Republic, northern Italy, 1943.jpg"
@@ -169,8 +180,7 @@
     <!--                F O O T E R              -->
     <footer class="footer">
       <small
-        >Photo credits to their respective owners,
-          I just share them with you.
+        >Photo credits to their respective owners, I just share them with you.
         <strong>Design by Juan Bravo - 2021</strong>
       </small>
     </footer>
@@ -181,6 +191,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
-    <script src="/js/index.js"> </script>
+    <script src="/js/index.js"></script>
   </body>
 </html>
