--- a/pages/usa.html
+++ b/pages/usa.html
@@ -26,7 +26,6 @@
       src="https://kit.fontawesome.com/51b92a92ba.js"
       crossorigin="anonymous"
     ></script>
-    <!--   LINK FONTS           -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -35,69 +34,79 @@
     />
     <!--                  LINKS CSS & JS -->
     <link rel="stylesheet" href="/css/styles.css" />
-  <script src="/js/index.js"> </script>
+    <script defer src="js/index.js"></script>
   </head>
   <body class="grid__container">
     <!--                    HEADER                     -->
     <header class="header">
       <nav class="nav">
-        <h1 class="logo">WW2 PHOTOS</h1>
-        <button class="nav__toggle" aria-label="Abrir menú">
+        <a class="logo nav-link" href="/index.html">WW2 PHOTOS</a>
+        <button class="nav-toggle" aria-label="Open menu">
           <i class="fas fa-bars"></i>
         </button>
-        <ul class="nav__menu nav__menu--visible"">
-          <li class="nav__menu--item">
-            <a class="nav__menu--link" href="/index.html">Home</a>
+        <ul class="nav-menu nav-menu_visible">
+          <li class="nav-menu-item">
+            <a href="/index.html" class="nav-menu-link nav-link">Home</a>
           </li>
-          <li class="nav__menu--item">
-            <a class="nav__menu--link" href="/pages/gallery.html">Gallery</a>
+          <li class="nav-menu-item">
+            <a class="nav-menu-link nav-link" href="/pages/gallery.html"
+              >Gallery</a
+            >
           </li>
-          <li class="nav__menu--item">
-            <a class="nav__menu--link" href="/pages/aboutme.html">About me</a>
+          <li class="nav-menu-item">
+            <a class="nav-menu-link nav-link" href="/pages/aboutme.html"
+              >About me</a
+            >
           </li>
-          <li class="nav__menu--item">
-            <a class="nav__menu--link" href="/pages/contact.html">Contact</a>
+          <li class="nav-menu-item">
+            <a class="nav-menu-link nav-link" href="/pages/contact.html"
+              >Contact</a
+            >
           </li>
         </ul>
-        
       </nav>
     </header>
-    <!--                  F I N            H E A D E R         -->
+    <!--  F I N            H E A D E R-->
     <!--                    M A I N                        -->
     <main class="main">
       <div class="USA">
         <h2 class="USA__title">United States of America</h2>
-        
+        <!--  pic   1 -->
+
         <img
           class="USA__img rounded img-fluid"
-          src="/img/USA/A US Marine used a flamethrower against a Japanese pillbox as he was covered by two riflemen, Iwo Jima, Feb 1945.jpg"
+          src="/img/USA/A US Marine used a flamethrower against a Japanese pillbox.jpg"
           alt="A US Marine used a flamethrower against a Japanese pillbox"
         />
+
         <h5 class="USA__text">
           A US Marine used a flamethrower against a Japanese pillbox as he was
           covered by two riflemen, Iwo Jima, Feb 1945
         </h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic 2   -->
         <img
           class="USA__img rounded img-fluid"
-          src="/img/USA/Airborne glider pilots aboard an LCVP on their way from the Normandy beaches to a transport to take them back to England, Jun 8, 1944.jpg"
+          src="/img/USA/Airborne glider pilots aboard an LCVP on their way from the Normandy beaches.jpg"
           alt="Airborne glider pilots aboard an LCVP"
         />
         <h5 class="USA__text">
           Airborne glider pilots aboard an LCVP on their way from the Normandy
           beaches to a transport to take them back to England, Jun 8, 1944
         </h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic   3 -->
         <img
           class="USA__img rounded img-fluid"
-          src="/img/USA/Engine change for M4 Sherman tank “Hurricane” at a repair depot near the front lines, Le Teilleul, France, July 1944. Note Federal C-2 Wrecker.jpg"
+          src="/img/USA/Engine change for M4 Sherman tank “Hurricane” at a repair depot near the front lines.jpg"
           alt="Engine change for M4 Sherman tank “Hurricane”"
         />
         <h5 class="USA__text">
           Engine change for M4 Sherman tank “Hurricane” at a repair depot near
           the front lines, Le Teilleul, France, July 1944
         </h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic  4  -->
         <img
           class="USA__img rounded img-fluid"
           src="/img/USA/Reinforcements of men and equipment moving inland at Omaha Beach, Normandy, 8 Jun 1944.jpg"
@@ -107,50 +116,63 @@
           Reinforcements of men and equipment moving inland at Omaha Beach,
           Normandy, 8 Jun 1944
         </h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic 5   -->
+
         <img
           class="USA__img rounded img-fluid"
-          src="/img/USA/US 101st Airborne Division paratrooper Corporal Louis E. Laird boarded a C-47 transport during dress rehersals for the Normandy invasion, spring 1944.jpg"
+          src="/img/USA/US 101st Airborne Division paratrooper Corporal Louis E. Laird boarded a C-47 transport.jpg"
           alt="US 101st Airborne Division paratrooper Corporal Louis E. Laird boarded a C-47"
         />
+
         <h5 class="USA__text">
-          US 101st Airborne Division paratrooper Corporal Louis E. Laird
-          boarded a C-47 transport during dress rehersals for the Normandy
-          invasion, spring 1944
+          US 101st Airborne Division paratrooper Corporal Louis E. Laird boarded
+          a C-47 transport during dress rehersals for the Normandy invasion,
+          spring 1944
         </h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic 6  -->
+
         <img
           class="USA__img rounded img-fluid"
-          src="/img/USA/US Army Rangers resting near Pointe du Hoc, Normandy, France, inland from Omaha Beach, 6 Jun 1944; note soldier using finger to push cartriges into magazine of his M1 Carbine.jpg"
+          src="/img/USA/US Army Rangers resting near Pointe du Hoc, Normandy, France, inland from Omaha Beach, 6 Jun 1944.jpg"
           alt="US Army Rangers resting near Pointe du Hoc, Normandy"
         />
+
         <h5 class="USA__text">
           US Army Rangers resting near Pointe du Hoc, Normandy, France, inland
           from Omaha Beach, 6 Jun 1944; note soldier using finger to push
           cartriges into magazine of his M1 Carbine.
         </h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic  7  -->
+
         <img
           class="USA__img rounded img-fluid"
-          src="/img/USA/US Army troops board an LVCP landing craft from Amphibious Transport Ship USS Joseph T Dickman at Torquay Hards, England, United Kingdom for a landing exercise in preparation for the Normandy invasion..jpg"
+          src="/img/USA/US Army troops board an LVCP landing craft from Amphibious Transport Ship USS Joseph T Dickman at Torquay Hards, England, United Kingdom..jpg"
           alt="US Army troops board an LVCP landing craft from Amphibious Transport Ship USS Joseph T Dickman"
         />
+
         <h5 class="USA__text">
           US Army troops board an LVCP landing craft from Amphibious Transport
           Ship USS Joseph T Dickman at Torquay Hards, England, United Kingdom
           for a landing exercise in preparation for the Normandy invasion
         </h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic  8  -->
+
         <img
           class="USA__img rounded img-fluid"
           src="/img/USA/US Marine kiss woman.jpg"
           alt="US Marine kiss woman"
         />
+
         <h5 class="USA__text">US Marine kiss woman</h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic  9  -->
         <img
           class="USA__img rounded img-fluid"
-          src="/img/USA/US Navy LST-134 and LST-325 beached at Normandy, France as jeeps driving along the invasion beach carry casualties to the waiting vessels, 12 Jun 1944, photo 1 of 4.jpg"
+          src="/img/USA/US Navy LST-134 and LST-325 beached at Normandy, France.jpg"
           alt="US Navy LST-134 and LST-325 beached at Normandy"
         />
         <h5 class="USA__text">
@@ -158,12 +180,15 @@
           driving along the invasion beach carry casualties to the waiting
           vessels, 12 Jun 1944
         </h5>
-        <hr class="hr">  
+        <hr class="hr" />
+        <!--  pic  10  -->
+
         <img
           class="USA__img rounded img-fluid"
-          src="/img/USA/USTwenty-EighthInfantryDivisionmarchalongtheChamps-Élysées, Paris,Francewithl’ArcdeTriomphe in the background, Aug291944..jpg"
-          alt="USTwenty-EighthInfantryDivisionmarchalongtheChamps-Élysées"
+          src="/img/USA/USTwenty-EighthInfantryDivisionmarchalongtheChamps-Élysées, Paris,France.jpg"
+          alt="EighthInfantryDivisionmarchalongtheChamps"
         />
+
         <h5 class="USA__text">
           US Twenty-Eighth Infantry Division march along the Champs-Élysées,
           Paris, Francewithl’ Arcde Triomphe in the background, Aug 29 1944
@@ -174,8 +199,7 @@
     <!--                F O O T E R              -->
     <footer class="footer">
       <small
-        >Photo credits to their respective owners,
-          I just share them with you.
+        >Photo credits to their respective owners, I just share them with you.
         <strong>Design by Juan Bravo - 2021</strong>
       </small>
     </footer>
@@ -186,6 +210,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
-    <script src="/js/index.js"> </script>
+    <script src="/js/index.js"></script>
   </body>
 </html>
