--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <button class="nav-toggle" aria-label="Open menu">
           <i class="fas fa-bars"></i>
         </button>
-        <ul class="nav-menu nav-menu_visible">
+        <ul class="nav-menu">
           <li class="nav-menu-item">
             <a href="/index.html" class="nav-menu-link nav-link">Home</a>
           </li>
