--- a/pages/usa.html
+++ b/pages/usa.html
@@ -40,28 +40,22 @@
     <!--                    HEADER                     -->
     <header class="header">
       <nav class="nav">
-        <a class="logo nav-link" href="/index.html">WW2 PHOTOS</a>
-        <button class="nav-toggle" aria-label="Open menu">
+        <h1 class="logo">WW2 PHOTOS</h1>
+        <button class="nav__toggle" aria-label="Abrir menú">
           <i class="fas fa-bars"></i>
         </button>
-        <ul class="nav-menu nav-menu_visible">
-          <li class="nav-menu-item">
-            <a href="/index.html" class="nav-menu-link nav-link">Home</a>
+        <ul class="nav__menu">
+          <li class="nav__menu--item">
+            <a class="nav__menu--link" href="/index.html">Home</a>
           </li>
-          <li class="nav-menu-item">
-            <a class="nav-menu-link nav-link" href="/pages/gallery.html"
-              >Gallery</a
-            >
+          <li class="nav__menu--item">
+            <a class="nav__menu--link" href="/pages/gallery.html">Gallery</a>
           </li>
-          <li class="nav-menu-item">
-            <a class="nav-menu-link nav-link" href="/pages/aboutme.html"
-              >About me</a
-            >
+          <li class="nav__menu--item">
+            <a class="nav__menu--link" href="/pages/aboutme.html">About me</a>
           </li>
-          <li class="nav-menu-item">
-            <a class="nav-menu-link nav-link" href="/pages/contact.html"
-              >Contact</a
-            >
+          <li class="nav__menu--item">
+            <a class="nav__menu--link" href="/pages/contact.html">Contact</a>
           </li>
         </ul>
       </nav>
